kubernetes/greet-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: greet-service
spec:
  selector:
    app: greet
  ports:
  - port: 80
    targetPort: 8080
    name: greet
