kubernetes/greet-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: greet-ingress
spec:
  tls:
    - hosts:
      - svc7.acme.co
      secretName: acme-cert
  rules:
    - host: svc7.acme.co
      http:
        paths:
          - backend:
              serviceName: greet-service
              servicePort: 80
            path: /
